@@ -25,7 +25,7 @@
 #else
 #define	USED
 #endif
-static const char sccsid[] USED = "@(#)/usr/ucb/soelim.sl	4.1 (gritter) 9/15/05";
+static const char sccsid[] USED = "@(#)/usr/ucb/soelim.sl	5.1 (gritter) 10/25/05";
 
 #include <stdio.h>
 #include <stdlib.h>
